<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>avr_vmc_2023_bdu</name>
    <version>0.0.0</version>
    <description>A node to trigger the ball dropper with the correct timings</description>
    <maintainer email="hunterbaker@me.com">Hunter Baker</maintainer>
    <license>LGPL-3.0-only</license>

    <depend>rclpy</depend>
    <depend>avr_pcc_2023_interfaces</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
